--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,8 +1,21 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
-    <h1 align="left">Personal Statement</h1>
-    
-    <h3 align="left">Add notes to include in your personal statement</h3>
+    <br />
+    <h1 align="left">Profile</h1>
+    <br />
+    <h3 align="left">OpenAI Key</h3>
+    <br />
+    <form method="POST">
+      <h5 align="left">Upload Api Key</h5>
+      <div class="form-group">
+        <input type="password" class="form-control" id="api_key" name="api_key" placeholder="Enter API Key"/>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <br />
+    <h3 align="left">Personal Statement Section</h3>
+    <br />
+    <h5 align="left">Add notes to include in your personal statement</h5>
     <ul class="list-group list-group-flush" id="notes">
       {% for note in user.notes %}
       <li class="list-group-item">
@@ -13,34 +26,32 @@
       </li>
       {% endfor %}
     </ul>
-    
     <form method="POST">
-      <textarea name="note" id="note" class="form-control"></textarea>
-      <br />
-      <div align="left">
-        <button type="submit" class="btn btn-primary">Add Statement Note</button>
+      <div class="form-group">
+        <textarea name="note" id="note" class="form-control"></textarea>
       </div>
+      <button type="submit" class="btn btn-primary">Add Statement Note</button>
     </form>
-    
-    <h3 align="left">Add core skill to the personal statement</h3>
-
-    <ul class="list-group list-skill-flush" id="skills">
-      {% for skill in user.skills %}
-      <li class="list-group-item skill-tag">
-        {{ skill.data }}
-        <button type="button" class="close" onClick="deleteSkill({{ skill.id }})">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </li>
-      {% endfor %}
-    </ul>
-
+    <br />
+    <h5 align="left">Add core skill to the personal statement</h5>
+    <div class="form-group">
+      <ul class="list-group list-skill-flush" id="skills">
+        {% for skill in user.skills %}
+        <li class="list-group-item skill-tag">
+          {{ skill.data }}
+          <button type="button" class="close" onClick="deleteSkill({{ skill.id }})">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
     <form method="POST">
-      <input type="text" name="skill" id="skill" class="form-control" placeholder="Enter your core skill here" data-role="tagsinput">
-      <br />
+      <div class="form-group">
+        <input type="text" name="skill" id="skill" class="form-control" placeholder="Enter your core skill here" data-role="tagsinput">
+      </div>
       <div align="left">
           <button type="submit" class="btn btn-primary">Add Core Skill</button>
       </div>
     </form>
-
     {% endblock %}
