--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -51,7 +51,7 @@
       }
     </style>
 
-    <title>{% block title %}Home{% endblock %}</title>
+    <title>{% block title %}Profile{% endblock %}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -66,7 +66,8 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="profile" href="/">Profile</a>
+          <a class="nav-item nav-link" id="generate" href="/generate">Generate CV</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
