--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}Profile{% endblock %} {% block content
     %}
     <br />
     <h1 align="left">Profile</h1>
