--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -51,7 +51,7 @@
       }
     </style>
 
-    <title>{% block title %}Profile{% endblock %}</title>
+    <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -66,10 +66,12 @@
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
-          <a class="nav-item nav-link" id="profile" href="/">Profile</a>
+          <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="profile" href="/profile">Profile</a>
           <a class="nav-item nav-link" id="generate" href="/generate">Generate CV</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
+          <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
           {% endif %}
@@ -120,7 +122,7 @@
               method: "POST",
               body: JSON.stringify({ noteId: noteId }),
             }).then((_res) => {
-              window.location.href = "/";
+              window.location.href = "/profile";
             });
           }
 
@@ -129,7 +131,7 @@
               method: "POST",
               body: JSON.stringify({ skillId: skillId }),
             }).then((_res) => {
-              window.location.href = "/";
+              window.location.href = "/profile";
             });
           }
 
@@ -138,7 +140,7 @@
               method: "POST",
               body: JSON.stringify({ api_keyId: api_keyId }),
             }).then((_res) => {
-              window.location.href = "/";
+              window.location.href = "/profile";
             });
           }
         </script>
