--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -1,57 +1,55 @@
-{% extends "base.html" %} {% block title %}Profile{% endblock %} {% block content
-    %}
-    <br />
+{% extends "base.html" %} {% block title %}Profile{% endblock %} 
+{% block content%}
+  <br />
     <h1 align="left">Profile</h1>
-    <br />
+  <br />
     <h3 align="left">OpenAI Access Parameters</h3>
-    <br />
+  <br />
 
-    {% if not user.api_keys %}
-    <form method="POST">
-      <h5 align="left">Upload Api Key</h5>
+{% if not user.api_keys %}
+  <form method="POST">
+    <h5 align="left">Upload Api Key</h5>
       <div class="form-group">
         <input type="text" class="form-control" id="api_key" name="api_key" placeholder="Enter API Key"/>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    {% else %}
-    <h5 align="left">API Key</h5>
-    <ul class="list-group list-group-flush" id="notes">
-      {% for api_key in user.api_keys %}
-      <li class="list-group-item">
-        Your OpenAI API Key {# Add your custom text here #}
-        <button type="button" class="close" onClick="deleteApiKey({{ api_key.id }})">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-  
-    <br />
-
-    <h3 align="left">Personal Statement Section</h3>
-    <br />
-
-    <h5 align="left">Add notes to include in your personal statement</h5>
-    <ul class="list-group list-group-flush" id="notes">
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+{% else %}
+  <h5 align="left">API Key</h5>
+  <ul class="list-group list-group-flush" id="notes">
+    {% for api_key in user.api_keys %}
+    <li class="list-group-item">Your OpenAI API Key 
+      <button type="button" class="close" onClick="deleteApiKey({{ api_key.id }})">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </li>
+    {% endfor %}
+  </ul>
+{% endif %} 
+  <br />
+    <h3 align="left">Personalize Settings and Info</h3>
+  <br />
+  <br />
+    <h5 align="left">Build a database of notes your want to mention in your covering letter</h5>
+      <ul class="list-group list-group-flush" id="notes">
       {% for note in user.notes %}
-      <li class="list-group-item">
-        {{ note.data }}
-        <button type="button" class="close" onClick="deleteNote({{ note.id }})">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </li>
+        <li class="list-group-item">
+          {{ note.data }}
+          <button type="button" class="close" onClick="deleteNote({{ note.id }})">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </li>
       {% endfor %}
-    </ul>
+      </ul>
     <form method="POST">
       <div class="form-group">
         <textarea name="note" id="note" class="form-control"></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Add Statement Note</button>
     </form>
+
     <br />
-    <h5 align="left">Add core skill to the personal statement</h5>
+    <h5 align="left">Add core skills to a cover letter skills database</h5>
     <div class="form-group">
       <ul class="list-group list-skill-flush" id="skills">
         {% for skill in user.skills %}
