added project model and html input form

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -70,4 +70,33 @@
           <button type="submit" class="btn btn-primary">Add Core Skill</button>
       </div>
     </form>
+  
+  <br />
+  <h5 align="left">Build your projects database to include into your covering letter</h5>
+    <form method="POST">
+      <div class="form-group">
+        <input type="text" name="project_title" id="project_title" class="form-control" placeholder="Enter Projects Title">
+        <input type="text" name="project_client" id="project_client" class="form-control" placeholder="Enter Projects Client">
+        <input type="text" name="project_date_from" id="Project_date_from" class="form-control" placeholder="Enter Projects Start Date">
+        <input type="text" name="project_date_too" id="Project_date_too" class="form-control" placeholder="Enter Projects Finish Date">
+        <input type="text" name="project_link" id="project_link" class="form-control" placeholder="Enter Project Link">
+        <input type="text" name="project_description" id="project_description" class="form-control" placeholder="Enter Project Description">
+        <input type="text" name="project_core_skill" id="project_core_skill" class="form-control" placeholder="Enter Projects Core Skills">
+      </div>
+      <div align="left">
+          <button type="submit" class="btn btn-primary">Add Project</button>
+      </div>
+    </form>
+
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
+
     {% endblock %}
