--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% block title %}Profile{% endblock %} 
+{% extends "base.html" %} 
+{% block title %}Profile{% endblock %} 
 {% block content%}
   <br />
     <h1 align="left">Profile</h1>
@@ -29,7 +30,6 @@
   <br />
     <h3 align="left">Personalize Settings and Info</h3>
   <br />
-  <br />
     <h5 align="left">Build a database of notes your want to mention in your covering letter</h5>
       <ul class="list-group list-group-flush" id="notes">
       {% for note in user.notes %}
@@ -51,9 +51,9 @@
     <br />
     <h5 align="left">Add core skills to a cover letter skills database</h5>
     <div class="form-group">
-      <ul class="list-group list-skill-flush" id="skills">
+      <ul class="list-group list-skill-flush d-inline-block" id="skills">
         {% for skill in user.skills %}
-        <li class="list-group-item skill-tag">
+        <li class="btn btn-outline-primary d-inline-block mr-2 btn-sm mb-2">
           {{ skill.data }}
           <button type="button" class="close ml-2" aria-label="close" onClick="deleteSkill({{ skill.id }})">
             <span aria-hidden="true">&times;</span>
@@ -62,16 +62,16 @@
         {% endfor %}
       </ul>
     </div>
-    <form method="POST">
+    <form action="{{ url_for('views.profile') }}" method="POST" id="skill-form">
       <div class="form-group">
-        <input type="text" name="skill" id="skill" class="form-control" placeholder="Enter your core skill here" data-role="tagsinput">
+        <input type="text" name="skill" id="skill" class="form-control" placeholder="Enter your core skill here">
       </div>
-      <button type="submit" class="btn btn-primary">Add Core Skill</button>
+      <button type="submit" class="btn btn-primary mb-3">Add Core Skill</button>
     </form>
   
   <br />
   <h5 align="left">Build your projects database to include into your covering letter</h5>
-  
+  <br />
   <button id="toggleFormBtn" class="btn btn-primary mb-3">Add Project</button>
 
   <div class="container mt-1">
@@ -140,19 +140,21 @@
     <br />
     <br />
 
-
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const toggleFormBtn = document.getElementById('toggleFormBtn');
         const projectForm = document.getElementById('projectForm');
-      
+        const skillInput = document.getElementById('skill');
+        const skillForm = document.getElementById('skill-form');
+        
         toggleFormBtn.addEventListener('click', function() {
-          if (projectForm.style.display === 'none') {
-            projectForm.style.display = 'block';
-            toggleFormBtn.textContent = 'Hide Form';
-          } else {
-            projectForm.style.display = 'none';
-            toggleFormBtn.textContent = 'Add Project';
+          // Toggle project form visibility
+        });
+    
+        skillInput.addEventListener('keydown', function(event) {
+          if (event.key === 'Enter') {
+            event.preventDefault(); // Prevent default Enter key behavior
+            skillForm.submit(); // Submit the form
           }
         });
       });
