--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -112,8 +112,18 @@
               window.location.href = "/profile";
             });
           }
-        </script>
 
+          window.addEventListener('beforeunload', function() {
+            localStorage.setItem('scrollPosition', window.scrollY);
+          });
+
+          document.addEventListener('DOMContentLoaded', function() {
+            const scrollPosition = localStorage.getItem('scrollPosition');
+            if (scrollPosition) {
+              window.scrollTo(0, parseInt(scrollPosition));
+            }
+          });
+        </script>
       {% endblock %}
   </body>
 </html>
