added smart look to extra notes section

--- a/website/templates/generate.html
+++ b/website/templates/generate.html
@@ -10,14 +10,7 @@
 <form action="{{ url_for('views.generate') }}" method="post">
   <div class="form-group">
     <label for="job_ad">Paste Job Advertisement</label>
-
-    <textarea
-      class="form-control"
-      id="job_ad"
-      name="job_ad"
-      rows="8"
-      placeholder="Enter job advertisement content"
-    ></textarea>
+    <textarea class="form-control" id="job_ad" name="job_ad" rows="8" placeholder="Enter job advertisement content"></textarea>
   </div>
 
   <div>
