--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -5,7 +5,11 @@
 <br />
 <h1 align="left">Welcome</h1>
 <br />
-<h3 align="left">Automate your covering letters</h3>
+<h3 align="left">Description of the project</h3>
+<br />
+<h3 align="left">Video of how to use the webapp</h3>
+<br />
+<h3 align="left">Info</h3>
 <br />
 
 {% endblock %}
