--- a/website/templates/generate.html
+++ b/website/templates/generate.html
@@ -1,34 +1,38 @@
 {% extends "base.html" %}
 
-{% block title %}Generate{% endblock %}
+{% block title %}analyze/create{% endblock %}
 
 {% block content %}
 <br />
-<h3 align="center">Create Covering Letter</h3>
+<h1 align="left">Analyze & Create Covering Letter</h1>
+<br />
+<h3 align="left">Use this page to Analyze the job advert and tailor your covering letter</h3>
 <br />
 
 <form action="{{ url_for('views.generate') }}" method="post">
-  <div class="form-group">
-    <label for="job_ad">Paste Job Advertisement</label>
-    <textarea class="form-control" id="job_ad" name="job_ad" rows="8" placeholder="Enter job advertisement content"></textarea>
-  </div>
+  <h5 align="left">Insert job advertisement</h5>
+    <div class="form-group">
+      <textarea class="form-control" id="job_ad" name="job_ad" rows="8" placeholder="Copy & paste job advert here..."></textarea>
+    </div>
+    <div>
+      <button type="submit" name="analyze" class="btn btn-primary" onclick="analyzeForm()">Analyze</button>
+      <button type="reset" class="btn btn-danger ml-2">Reset</button>
+    </div>
 
-  <div>
-    <button type="submit" name="analyze" class="btn btn-primary" onclick="analyzeForm()">Analyze and Display</button>
-  </div>
-
-  <div id="analysisResult">
-    {{ analysisResult | safe }}
-  </div>
-
+    <div id="analysisResult">
+      {{ analysisResult | safe }}
+    </div>
+<br />
+  <h3 align="left">Create Your Tailored Supporting Covering Letter </h3>
+<br />
   <h5 align="left">Passages you want to include</h5>
     <div class="form-group">
-        <label for="selectTag">Select Key Passages:</label>
-        <select id="selectTag" class="form-control">
-            {% for note in user.notes %}
-            <option value="{{ note.data }}">{{ note.data }}</option>
-            {% endfor %}
-        </select>
+      <select id="selectTag" class="form-control">
+        <option disabled selected value="">Select Passages</option>
+        {% for note in user.notes %}
+        <option value="{{ note.data }}">{{ note.data }}</option>
+        {% endfor %}
+      </select>
     </div>
     <div>
         <input type="hidden" name="selectedNotes" id="selectedNotesInput">
