--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -188,12 +188,10 @@
   
         skillInput.addEventListener('keydown', function(event) {
           if (event.key === 'Enter') {
-            event.preventDefault(); // Prevent default Enter key behavior
-            skillForm.submit(); // Submit the form
+            event.preventDefault();
+            skillForm.submit();
           }
         });
-  
-        // Add any other event listeners or scripts here
       });
     </script>
 
