--- a/website/templates/generate.html
+++ b/website/templates/generate.html
@@ -19,7 +19,16 @@
   </div>
 </form>
   
-<div id="analysisResult">{{ analysisResult | safe }}</div>
+<div class="container mt-5">
+    {% for section, content in sections.items() %}
+      <h2>{{ section }}</h2>
+      <ul>
+        {% for line in content %}
+          <li>{{ line }}</li>
+        {% endfor %}
+      </ul>
+  {% endfor %}
+</div>
   
 <br id="createCover"/>
   <h3 align="left">Create Your Tailored Supporting Covering Letter</h3>
