added non conforming function to new file and message

--- a/website/templates/generate.html
+++ b/website/templates/generate.html
@@ -20,6 +20,12 @@
 </form>
   
 <div class="container mt-5">
+    {% if error_message %}
+    <div class="alert alert-danger">
+      {{ error_message }}
+    </div>
+  {% endif %}
+  
     {% for section, content in sections.items() %}
       <h2>{{ section }}</h2>
       <ul>
