caps in gernerate view changed

--- a/website/templates/generate.html
+++ b/website/templates/generate.html
@@ -5,7 +5,7 @@
 <br />
   <h1 align="left">Analyze & Create Covering Letter</h1>
 <br />
-  <h3 align="left">Use this page to Analyze the job advert and tailor your covering letter</h3>
+  <h3 align="left">Use this page to analyze the job advert and tailor your covering letter</h3>
 <br />
 
 <form action="{{ url_for('views.generate') }}" method="post">
@@ -43,7 +43,7 @@
   </div>
   
 <br id="createCover"/>
-  <h3 align="left">Create Your Tailored Supporting Covering Letter</h3>
+  <h3 align="left">Create your tailored supporting covering letter</h3>
 <br />
   <button type="button" id="toggleFormBtn" class="btn btn-primary mb-3">Create Optimised Covering Letter</button>
   
