--- a/website/templates/generate.html
+++ b/website/templates/generate.html
@@ -3,13 +3,13 @@
 {% block content %}
 
 <br />
-  <h1 align="left">Analyze & Create Covering Letter</h1>
+  <h1 align="left">Analyze & Create</h1>
 <br />
-  <h3 align="left">Use this page to analyze the job advert and tailor your covering letter</h3>
+  <h3 align="left">Use this section to analyze the job advert.</h3>
 <br />
 
 <form action="{{ url_for('views.generate') }}" method="post">
-  <h5 align="left">Insert job advertisement</h5>
+  <h5 align="left">Job advertisement</h5>
   <div class="form-group">
     <textarea class="form-control" id="job_ad" name="job_ad" rows="10" placeholder="Copy & paste job advert here...">{{ input_value }}</textarea>
   </div>
