--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -2,14 +2,10 @@
 
 {% block content %}
 <div class="container">
-    <h1>Generated Results</h1>
-    <h2>API Response:</h2>
-    <p>{{ api_response }}</p>
-    
-    <h2>Second Response:</h2>
-    <p>{{ second_response }}</p>
-    
-    <h2>Personal Statement:</h2>
-    <p>{{ personal_statement }}</p>
+    <br />
+    <h1>Created Results</h1>
+    <br />
+    <h3>ChatGPT's skills matcher</h3>
+    <p>{{ skills_matcher }}</p>
 </div>
 {% endblock %}
